--- a/docs/custom.css
+++ b/docs/custom.css
@@ -1,6 +1,21 @@
 header#qit {
     text-align: center;
 }
+
 header#qit h1 {
     margin-top: 0;
+}
+
+.sidebar h1.app-name {
+    display: none;
+}
+
+header#qit.mobile {
+    display: none;
+}
+
+@media screen and (max-width: 800px) {
+    header#qit.mobile {
+        display: block;
+    }
 }
