--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,7 @@
   --ifm-color-primary-lightest: #f1ebf6;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.hidden {
+  display: none !important;
+}
